# software-11

./: README.md  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 9ace6b49e01f_init.py
str/: schemas.py
str/database/: db.py  models.py
str/repository/: notes.py
str/routes/: notes.py
